--- a/app/src/main/res/layout/fragment_create_group.xml
+++ b/app/src/main/res/layout/fragment_create_group.xml
@@ -80,15 +80,15 @@
                     app:layout_constraintVertical_bias="0.792"
                     tools:layout_editor_absoluteX="-16dp" />
 
-                <ImageButton
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/btnUpload"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:layout_gravity="center"
-                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="Upload"
-                    android:padding="8dp"
                     android:src="@drawable/ic_upload"
+                    app:civ_border_color="#EEEEEE"
+                    app:civ_border_width="2dp"
                     app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
