--- a/app/src/main/res/layout/recycleview_coin.xml
+++ b/app/src/main/res/layout/recycleview_coin.xml
@@ -25,8 +25,9 @@
 
 
     <FrameLayout
-        android:id="@+id/fragmentContainerRecycleCoin"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
