--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,78 +3,75 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginActivity">
+    app:startDestination="@id/loginFragment">
 
-    <!-- Login and Registration -->
-    <activity
-        android:id="@+id/loginActivity"
-        android:name="com.example.androidproject.activities.LoginActivity"
+    <!-- Authentication -->
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.androidproject.fragments.LoginFragment"
         android:label="Login"
-        tools:layout="@layout/activity_login">
+        tools:layout="@layout/fragment_login">
         <action
-            android:id="@+id/action_loginActivity_to_registerActivity"
-            app:destination="@id/registerActivity" />
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
         <action
-            android:id="@+id/action_loginActivity_to_mainActivity"
-            app:destination="@id/mainActivity"
-            app:popUpTo="@id/loginActivity"
+            android:id="@+id/action_loginFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
-    </activity>
+    </fragment>
 
-    <activity
-        android:id="@+id/registerActivity"
-        android:name="com.example.androidproject.activities.RegisterActivity"
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.example.androidproject.fragments.RegisterFragment"
         android:label="Register"
-        tools:layout="@layout/activity_register">
+        tools:layout="@layout/fragment_register">
         <action
-            android:id="@+id/action_registerActivity_to_loginActivity"
-            app:destination="@id/loginActivity" />
-    </activity>
-    <action
-        android:id="@+id/action_createGroupFragment_to_mainFragment"
-        app:destination="@id/mainActivity" />
-    <!-- Main Activity -->
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.androidproject.activities.MainActivity"
-        android:label="Main Activity"
-        tools:layout="@layout/activity_main">
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+    <!-- Main Fragment (Home Screen) -->
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.androidproject.fragments.MainFragment"
+        android:label="Home"
+        tools:layout="@layout/fragment_main">
         <action
-            android:id="@+id/action_mainActivity_to_profileFragment"
+            android:id="@+id/action_mainFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
         <action
-            android:id="@+id/action_mainActivity_to_createGroupActivity"
-            app:destination="@id/createGroupActivity" />
+            android:id="@+id/action_mainFragment_to_createGroupFragment"
+            app:destination="@id/createGroupFragment" />
         <action
-            android:id="@+id/action_mainActivity_to_groupExpensesActivity"
-            app:destination="@id/groupExpensesActivity" />
-    </activity>
+            android:id="@+id/action_mainFragment_to_groupExpensesFragment"
+            app:destination="@id/groupExpensesFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_coinListFragment"
+            app:destination="@id/coinListFragment" />
+    </fragment>
 
     <!-- Profile Section -->
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.example.androidproject.views.ProfileFragment"
+        android:name="com.example.androidproject.fragments.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_profileFragment_to_editUserProfileFragment"
             app:destination="@id/editUserProfileFragment" />
         <action
-            android:id="@+id/action_profileFragment_to_loginActivity"
-            app:destination="@id/loginActivity"
+            android:id="@+id/action_profileFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
             app:popUpTo="@id/nav_graph"
             app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
         android:id="@+id/editUserProfileFragment"
-        android:name="com.example.androidproject.views.EditUserProfileFragment"
+        android:name="com.example.androidproject.fragments.EditUserProfileFragment"
         android:label="Edit Profile"
         tools:layout="@layout/fragment_edit_user_profile">
-        <argument
-            android:name="user"
-            app:argType="com.example.androidproject.model.User"
-            app:nullable="true" />
         <action
             android:id="@+id/action_editUserProfileFragment_to_profileFragment"
             app:destination="@id/profileFragment"
@@ -83,51 +80,51 @@
     </fragment>
 
     <!-- Group Management -->
-    <activity
-        android:id="@+id/createGroupActivity"
-        android:name="com.example.androidproject.activities.CreateGroupActivity"
+    <fragment
+        android:id="@+id/createGroupFragment"
+        android:name="com.example.androidproject.fragments.CreateGroupFragment"
         android:label="Create Group"
-        tools:layout="@layout/create_group">
+        tools:layout="@layout/fragment_create_group">
         <action
-            android:id="@+id/action_createGroupActivity_to_mainActivity"
-            app:destination="@id/mainActivity"
-            app:popUpTo="@id/mainActivity"
+            android:id="@+id/action_createGroupFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/mainFragment"
             app:popUpToInclusive="true" />
-    </activity>
+    </fragment>
 
     <!-- Expenses Management -->
-    <activity
-        android:id="@+id/groupExpensesActivity"
-        android:name="com.example.androidproject.activities.GroupExpensesActivity"
+    <fragment
+        android:id="@+id/groupExpensesFragment"
+        android:name="com.example.androidproject.fragments.GroupExpensesFragment"
         android:label="Group Expenses"
         tools:layout="@layout/fragment_group_expenses">
         <argument
             android:name="groupId"
             app:argType="string" />
         <action
-            android:id="@+id/action_groupExpensesActivity_to_addExpenseActivity"
-            app:destination="@id/addExpenseActivity" />
-    </activity>
+            android:id="@+id/action_groupExpensesFragment_to_addExpenseFragment"
+            app:destination="@id/addExpenseFragment" />
+    </fragment>
 
-    <activity
-        android:id="@+id/addExpenseActivity"
-        android:name="com.example.androidproject.activities.AddExpenseActivity"
+    <fragment
+        android:id="@+id/addExpenseFragment"
+        android:name="com.example.androidproject.fragments.AddExpenseFragment"
         android:label="Add Expense"
         tools:layout="@layout/fragment_add_expense">
         <argument
             android:name="groupId"
             app:argType="string" />
         <action
-            android:id="@+id/action_addExpenseActivity_to_groupExpensesActivity"
-            app:destination="@id/groupExpensesActivity"
-            app:popUpTo="@id/groupExpensesActivity"
+            android:id="@+id/action_addExpenseFragment_to_groupExpensesFragment"
+            app:destination="@id/groupExpensesFragment"
+            app:popUpTo="@id/groupExpensesFragment"
             app:popUpToInclusive="true" />
-    </activity>
+    </fragment>
 
-<!--    &lt;!&ndash; Other Fragments &ndash;&gt;-->
-<!--    <fragment-->
-<!--        android:id="@+id/coinListFragment"-->
-<!--        android:name="com.example.androidproject.views.CoinListFragment"-->
-<!--        android:label="Coin List Fragment"-->
-<!--        tools:layout="@layout/recycleview_coin" />-->
+    <!-- Coin List Fragment -->
+    <fragment
+        android:id="@+id/coinListFragment"
+        android:name="com.example.androidproject.fragments.CoinListFragment"
+        android:label="Coin List"
+        tools:layout="@layout/recycleview_coin" />
 </navigation>
