fixed images bug

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -48,7 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/tab_selected_background"
+            android:background="#E0EBE5"
             android:padding="8dp"
             android:text="FRIENDS"
             android:textAlignment="center"
@@ -75,7 +75,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="#E0EBE5"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,6 +86,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
+            android:background="#E0EBE5"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
             android:scrollbars="vertical" />
