--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -108,19 +108,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pageTitle" />
 
-    <ImageButton
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/uploadButton"
-        android:layout_width="64dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="88dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Upload image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="36dp"
+        android:contentDescription="Upload"
         android:src="@drawable/ic_upload"
+        app:civ_border_color="#EEEEEE"
+        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/amountField"
-        app:tint="@color/black" />
+        app:layout_constraintTop_toBottomOf="@+id/amountField" />
 
     <Button
         android:id="@+id/submitButton"
