--- a/app/src/main/res/layout/fragment_group_expenses.xml
+++ b/app/src/main/res/layout/fragment_group_expenses.xml
@@ -81,7 +81,7 @@
             android:id="@+id/cvDollarIcon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="#E0EBE5"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,7 +106,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
-            app:cardBackgroundColor="#FFFFFF"
+            app:cardBackgroundColor="#E0EBE5"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -132,7 +132,7 @@
         android:id="@+id/expenseSummaryText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        android:background="#E0EBE5"
         android:padding="8dp"
         android:textColor="#000000"
         android:textSize="14sp"
