--- a/app/src/main/res/layout/group_item.xml
+++ b/app/src/main/res/layout/group_item.xml
@@ -9,6 +9,7 @@
     app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/rounded_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
