--- a/app/src/main/res/layout/fragment_edit_expense.xml
+++ b/app/src/main/res/layout/fragment_edit_expense.xml
@@ -129,18 +129,17 @@
         app:layout_constraintStart_toEndOf="@id/dateIcon"
         app:layout_constraintTop_toTopOf="@id/dateIcon" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/expenseImage"
-        android:layout_width="103dp"
-        android:layout_height="101dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/ic_recipt"
-        app:civ_border_color="#EEEEEE"
-        app:civ_border_width="2dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="40dp"
         android:scaleType="centerCrop"
+        android:background="@drawable/rounded_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dateField"/>
+        app:layout_constraintTop_toBottomOf="@id/dateField"
+        tools:src="@drawable/ic_recipt" />
 
     <Button
         android:id="@+id/saveButton"
