--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -108,33 +108,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pageTitle" />
 
-    <ImageButton
-        android:id="@+id/uploadButton"
-        android:layout_width="64dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="88dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Upload image"
-        android:src="@drawable/ic_upload"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/amountField"
-        app:tint="@color/black" />
-
     <!-- Add a square ImageView for expense image preview -->
+
     <ImageView
-        android:id="@+id/expenseImagePreview"
+        android:id="@+id/uploadButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="116dp"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
         android:background="@drawable/rounded_edit_text"
+        android:contentDescription="Expense Image Preview"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_recipt"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/uploadButton"
-        android:contentDescription="Expense Image Preview" />
+        app:layout_constraintTop_toBottomOf="@+id/amountField" />
 
     <Button
         android:id="@+id/submitButton"
@@ -150,10 +139,12 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expenseImagePreview" />
+        app:layout_constraintTop_toBottomOf="@+id/uploadButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/bottom_nav"
